fix: (Toast) style not correct on iOS 13 and 14

--- a/src/components/toast/toast.less
+++ b/src/components/toast/toast.less
@@ -5,7 +5,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: fit-content;
+    width: auto;
     min-width: 96px;
     max-width: 70%;
     max-height: 70%;
